--- a/myfirst.html
+++ b/myfirst.html
@@ -3,6 +3,7 @@
         <title>my first page about javascript</title>
     </head>
     <body>
+        <p>I am a new paragraph.</p>
         <input type="text" id ="textfield">
         <var></var>
         <Button type="button" id = "btn1" onclick="myfunction()" > </Button>
